Several small housekeeping items (fingers crossed nothing broke)

v0.8.52 4/16/2021
Speed up panning by implementing sparse plotting when Ndata >> Npixels
Added unit "n/a" for light and sound since these are not calibrated

v0.8.55 4/18/2021
Added zip compression to files used for saving & restoring acquisitions.
The files now have names like "IOLab_Apr-18-2021_19.48.59_Pendulum_29s.iozip".
Files saved with previous versions will not be readable. 

v0.8.56 4/21/2021
Added DAC output control.
Added A1/A2/A3 readout.
Fixed error when checking/unchecking empty plot  
Better rezero icon.

v0.8.58 4/22/2021
Added up/down DAC controls
Some housekeeping

v0.8.60 4/22/2021
Add controls for other outputs (D5, D6, buzzer).
Hide D5 control until option menu is available.

v0.9.00 4/23/2021
Added an options modal to select which output controls are shown 
Store options in a cookie
Changed cookie persistence to 2 years for both calibrations and options
Tweak CSV download icon
Elevate application to Beta

v0.9.02 4/26/2021
Bugfix - removed outdated reference to chartlist causing calibration to fail

v0.9.04 4/30/2021
Added inactivity timeout to save battery life. Made timeout setting an option controllable
on option modal & saved in option cookie.  If not set the fault timeout is 10 minutes. 

v0.9.06 5/8/2021
Added ability to specify the vertical B field in order to improve magnetomter calibration.
Made light sensor "zeroable".
Other small improvements to options modal. 

v0.9.08 x/x/2021


====================== WORK ========================================
Known Bugs:
- Sometimes plots empty if not viewed before csv export of another plot (only Mac ?)

Front Burner Tasks:
- save/restore raw data
- Clean up console.log
- Clean up comments & code

Back Burner Tasks:
- Revisit time shift
- Rationalize usage of calData vs plotData in plotting code
- display rezero icon on all zeroable plots when linked
- save/restore dataShift (?)
- improved gyroscope calibration