@@ -65,6 +65,9 @@ Made light sensor "zeroable".
 Other small improvements to options modal. 
 
 v0.9.08 x/x/2021
+Save/restore raw data (rxdata). Includes saving & restoring calibration info as well.
+Save local_Bvert value with magnetometer calibration constants. 
+Add link to changelog on appication (click on "beta)"
 
 
 ====================== WORK ========================================
@@ -72,7 +75,8 @@ Known Bugs:
 - Sometimes plots empty if not viewed before csv export of another plot (only Mac ?)
 
 Front Burner Tasks:
-- save/restore raw data
+- Device-pairing modal
+- Time-aligned CSV export for (one file for all sensors)
 - Clean up console.log
 - Clean up comments & code
 
